# AK_Lab5

./: CMakeLists.txt  README.md  dec.cpp  enc.cpp  main.cpp  working_with_file.cpp
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  encdec
